--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   flutter_barcode_scanner: ^2.0.0
   flutter_native_splash: ^2.4.0
   provider: ^6.1.2
+  shared_preferences: ^2.2.3
 
 flutter_native_splash:
   color: '#EEEEEE'
