--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,11 +18,12 @@ dependencies:
   
   cupertino_icons: ^1.0.6
   vibration: ^1.9.0
-  image_picker: ^1.1.1
+  image_picker: ^1.1.2
   flutter_barcode_scanner: ^2.0.0
   flutter_native_splash: ^2.4.0
   provider: ^6.1.2
   shared_preferences: ^2.2.3
+  google_ml_kit: ^0.18.0
 
 flutter_native_splash:
   color: '#EEEEEE'
