--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,8 +23,7 @@ dependencies:
   flutter_native_splash: ^2.4.0
   provider: ^6.1.2
   shared_preferences: ^2.2.3
-  google_ml_kit: ^0.18.0
-
+  google_mlkit_barcode_scanning: ^0.12.0
 flutter_native_splash:
   color: '#EEEEEE'
   image: 'assets/splash.jpg'
