--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   provider: ^6.1.2
   shared_preferences: ^2.2.3
   google_mlkit_barcode_scanning: ^0.12.0
+  share_plus: ^7.2.2
 flutter_native_splash:
   color: '#EEEEEE'
   image: 'assets/splash.jpg'
