--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  
+  flutter_localizations:
+    sdk: flutter
 
   
   cupertino_icons: ^1.0.6
@@ -43,6 +45,8 @@ flutter:
 
   
   uses-material-design: true
+
+  generate: true
 
   # To add assets to your application, add an assets section, like this:
   assets:
