--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,8 @@ dependencies:
   provider: ^6.1.2
   shared_preferences: ^2.2.3
   google_mlkit_barcode_scanning: ^0.12.0
-  share_plus: ^7.2.2
+  share_plus: ^10.0.2
+  qr_flutter: ^4.1.0
 flutter_native_splash:
   color: '#EEEEEE'
   image: 'assets/splash.jpg'
@@ -38,7 +39,7 @@ dev_dependencies:
     sdk: flutter
 
   
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
 
 
 flutter:
