--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   google_mlkit_barcode_scanning: ^0.12.0
   share_plus: ^10.0.2
   qr_flutter: ^4.1.0
+  geolocator: ^13.0.1
 flutter_native_splash:
   color: '#EEEEEE'
   image: 'assets/splash.jpg'
