--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,6 +8,8 @@
         android:label="QrScanner"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+        <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="@string/ANDROID_MAPS_APIKEY"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
